--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "homepage": "https://maryna-skrypnyk.github.io/goit-js-hw-10-food-service-parcel",
   "scripts": {
     "dev": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /goit-js-hw-10-food-service-parcel/"
+    "build": "parcel build src/*.html --public-url /goit-js-hw-10-food-service-parcel/",
+    "deploy": "gh-pages -d dist",
+    "predeploy": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -23,6 +25,7 @@
     "parcel-bundler": "^1.12.5",
     "parcel-plugin-custom-dist-structure": "^1.1.17",
     "parcel-plugin-handlebars-precompile": "^1.0.2",
+    "parcel-plugin-nuke-dist": "^1.0.1",
     "posthtml-include": "^1.6.2",
     "sass": "^1.32.8"
   },
